Navbar z-index fix

--- a/csaevify-frontend/src/components/Navbar/Navbar.css
+++ b/csaevify-frontend/src/components/Navbar/Navbar.css
@@ -11,6 +11,7 @@
     height: 11vh;
     text-align: center;
     position: fixed;
+    z-index: 1;
 }
 
 .navbar-first {
