--- a/csaevify-frontend/src/pages/Contact/ContactPage.css
+++ b/csaevify-frontend/src/pages/Contact/ContactPage.css
@@ -100,6 +100,7 @@ h1{
    margin-bottom: 1rem;
    opacity: 70%;
    margin-left: 5rem;
+   z-index: -1;
 }
 
 .messageInput{
@@ -121,4 +122,10 @@ h1{
    outline: 3px solid white;
    border-radius: 10px;
    cursor: pointer;
+}
+
+@media screen and (max-width: 1500px) {
+   .messageInput{
+      width: 20rem;
+   }
 }
